--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,33 @@
 version: '3.7'
 services:
   minio:
+    container_name: kltn-minio
     image: minio/minio
     command: [server, /data]
     environment:
       MINIO_ACCESS_KEY: admin
-      MINIO_SECRET_KEY: SuperSecr3t
+      MINIO_SECRET_KEY: admin@123
     ports:
-      - 9000:9000
+      - 9002:9002
     volumes:
-      - minio_data:/data
+      - C:\Users\trinh\OneDrive\Tài liệu\UET\data\minio
 
-volumes:
-  minio_data:
+  elasticsearch:
+    container_name: kltn-elasticsearch
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.15.2
+    environment:
+      - discovery.type=single-node
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - bootstrap.memory_lock=true
+    ports:
+      - 9200:9200
+    volumes:
+      - C:\Users\trinh\OneDrive\Tài liệu\UET\data\elastic-search
+
+  kibana:
+    container_name: kltn-kibana
+    image: docker.elastic.co/kibana/kibana:7.15.2
+    environment:
+      - ELASTICSEARCH_HOSTS=http://kltn-elasticsearch:9200
+    ports:
+      - 5601:5601
