--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,103 @@
+aiofiles==0.7.0
+aiohttp==3.7.4.post0
+aioredis==1.3.1
 alembic==1.6.5
 asgiref==3.3.4
+async-timeout==3.0.1
+asyncio==3.4.3
+atomicwrites==1.4.0
+attrs==21.4.0
+cachetools==4.2.4
 certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
+charset-normalizer==2.0.12
 click==7.1.2
-cryptography==3.4.7
+colorama==0.4.4
+coverage==6.4.1
+cryptography==37.0.2
 DateTime==4.3
+deepdiff==5.8.1
+Deprecated==1.2.13
+docx2txt==0.8
+enum34==1.1.10
+et-xmlfile==1.1.0
+fakeredis==1.6.1
 fastapi==0.65.2
+freezegun==1.2.0
+googleapis-common-protos==1.56.2
 greenlet==1.1.0
+grpcio==1.39.0
 h11==0.12.0
+hiredis==2.0.0
 idna==2.10
 importlib-metadata==4.5.0
+iniconfig==1.1.1
+kafka-python==2.0.2
 Mako==1.1.4
 MarkupSafe==2.0.1
 minio==7.0.3
-pycparser==2.20
-pydantic==1.8.2
-PyMySQL==1.0.2
-python-dateutil==2.8.1
-python-dotenv==0.17.1
-python-editor==1.0.4
-pytz==2021.1
-requests==2.25.1
-six==1.16.0
-slugify==0.0.1
-SQLAlchemy==1.4.17
-SQLAlchemy-Utils==0.37.7
-timestamp==0.0.1
-typing-extensions==3.10.0.0
-urllib3==1.26.5
-uvicorn==0.14.0
-zipp==3.4.1
-zope.interface==5.4.0
-pytest~=6.2.4
 mock==4.0.3
-pytest-cov==2.8.1
-typer==0.3.2
-pyhumps==3.0.2
-pandas==1.2.5
-prometheus-client==0.7.1
-starlette==0.14.2
-aiofiles==0.7.0
-XlsxWriter==1.4.4
+multidict==6.0.2
+numpy==1.21.6
 openpyxl==3.0.7
-numpy~=1.21.0
-openpyxl==3.0.7
-cachetools~=4.2.2
-fakeredis~=1.6.0
-pytest-asyncio==0.15.1
-enum34~=1.1.10
-aiohttp~=3.7.4.post0
-asyncio==3.4.3
-grpcio==1.39.0
-git+https://nghia.nd:zb4BrpA6F7V6MeREy3jx@git.teko.vn/platform/tekone.git
-pyarrow==5.0.0
-redis==3.5.3
-aioredis==1.3.1
-teko-export-test
+opentelemetry-api==1.7.1
 opentelemetry-exporter-jaeger==1.7.1
+opentelemetry-exporter-jaeger-proto-grpc==1.7.1
+opentelemetry-exporter-jaeger-thrift==1.7.1
+opentelemetry-instrumentation==0.26b1
+opentelemetry-instrumentation-asgi==0.26b1
 opentelemetry-instrumentation-fastapi==0.26b1
 opentelemetry-instrumentation-requests==0.26b1
 opentelemetry-instrumentation-sqlalchemy==0.26b1
 opentelemetry-sdk==1.7.1
-opentelemetry-api==1.7.1
-xlrd==2.0.1
+opentelemetry-semantic-conventions==0.26b1
+opentelemetry-util-http==0.26b1
+ordered-set==4.1.0
+packaging==21.3
+pandas==1.2.5
+pdfminer.six==20220524
+pdfplumber==0.7.1
+Pillow==9.1.1
+pluggy==1.0.0
+prometheus-client==0.7.1
+protobuf==3.20.1
+py==1.11.0
+pyarrow==5.0.0
+pycparser==2.20
+pydantic==1.8.2
+pyhumps==3.0.2
+PyMySQL==1.0.2
+pyparsing==3.0.9
+pytest==6.2.5
+pytest-asyncio==0.15.1
+pytest-cov==2.8.1
+python-dateutil==2.8.1
+python-dotenv==0.17.1
+python-editor==1.0.4
+python-multipart==0.0.5
+pytz==2021.1
+redis==3.5.3
+requests==2.25.1
+six==1.16.0
+slugify==0.0.1
+sortedcontainers==2.4.0
+SQLAlchemy==1.4.17
+SQLAlchemy-Utils==0.37.7
 starlette==0.14.2
 starlette-context==0.3.3
-freezegun==1.2.0
-kafka-python==2.0.2
-unidecode==1.3.4
-deepdiff==5.8.1
+thrift==0.16.0
+timestamp==0.0.1
+toml==0.10.2
+typer==0.3.2
+typing-extensions==3.10.0.0
+Unidecode==1.3.4
+urllib3==1.26.5
+uvicorn==0.14.0
+Wand==0.6.7
+wrapt==1.14.1
+xlrd==2.0.1
+XlsxWriter==1.4.4
+yarl==1.7.2
+zipp==3.4.1
+zope.interface==5.4.0
