drafe code call Elastic

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 SQLALCHEMY_DATABASE_URI=mysql+pymysql://root:root@localhost:3306/mkt_core_dev?charset=utf8mb4
 SQLALCHEMY_DATABASE_URI_TEST=mysql+pymysql://root:root@localhost:3306/mkt_core_dev_test?charset=utf8mb4
 ENV=test
+ELASTIC_SERVICE_API_BASE_URL=http://localhost:9200
