authen with token for backend

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ SQLALCHEMY_DATABASE_URI=mysql+pymysql://root:root@localhost:3306/mkt_core_dev?ch
 SQLALCHEMY_DATABASE_URI_TEST=mysql+pymysql://root:root@localhost:3306/mkt_core_dev_test?charset=utf8mb4
 ENV=test
 ELASTIC_SERVICE_API_BASE_URL=http://localhost:9200
+JWT_SECRET_KEY=KLTN
+GOOGLE_CLIENT_ID=162098319608-buveos2g614scesufvvqrqqke3nml452.apps.googleusercontent.com
